# Raspberry-Pi5-Federated-Environment

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GITHUB_ENVIRONMENT_SUMMARY.md  LICENSE  README.md  SECURITY.md  SETUP_SUMMARY.md  SUPPORT.md  THIRD_PARTY_LICENSES.md  config.yaml  mkdocs.yml  pyproject.toml  pytest-sprint6.ini  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: Dockerfile
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: advanced-ci.yml  ci.yml  release.yml  sprint6-ci.yml  stale.yml
client/: __init__.py  main.py  requirements.txt
client/matlab/: __init__.py  matlab_integration.py
client/sensing/: __init__.py  sensor_manager.py  vibration_sensor.py
client/training/: __init__.py  autoencoder.py  federated_client.py  tinyml_inference.py
docs/: BETA_TESTING.md  COMMUNITY_ONBOARDING.md  CodeRequirements.md  DebugAndInvocationProtocols.md  DocumentationAndArchiveIntegration.md  ExtensionStewardship.md  FolderStructureGovernance.md  IoT_Edge.code-workspace  MAINTENANCE_PLAN.md  OPERATIONS-LOG.md  PROJECT_SPRINT_STATUS.md  ProcessRoadmap.md  ProjectDeveloperImplementationRoadmap.md  ProjectManagerExtension.md  ProjectTechnicalProposal.md  README.md  SECURITY_GUIDE.md  TECHNICAL_FAQ.md  TaskAndRitualAutomation.md  VersionControlAndLineageTracking.md  WorkspaceCreationAndRitualNaming.md  commit_message.txt  index.md  tag_message.txt
matlab/: create_predictive_maintenance_model.m  env_preprocess.m
scripts/: deploy_sprint7.sh  inventory.yml  performance_benchmark.py  prepare_v1_release.sh  provision_pi5.yml  security_audit.py  security_audit_simple.py  simulate_federated_learning.py  test_matlab_integration.py  test_matlab_integration_simple.py  test_sensors.py  test_tinyml_pipeline.py
scripts/templates/: federated-client.logrotate.j2  federated-client.service.j2  health_check.py.j2  monitor_node.sh.j2  pi_config.yaml.j2
server/: __init__.py  main.py  requirements.txt
server/aggregation/: __init__.py  federated_server.py
server/security/: secure_federated_server.py  tls_config.py
tests/: conftest.py
tests/integration/: test_federated_workflow.py
tests/unit/: test_lstm_model.py  test_security_framework.py  test_sensor_manager.py
